# DayRoller

./: CMakeLists.txt  README.md
include/: appinit.h  main.cpp
include/decision/: constantdirective.cpp  constantdirective.h  decider.cpp  decider.h  directive.cpp  directive.h  roller.cpp  roller.h  variabledirective.cpp  variabledirective.h
include/gui/: dayfocus.cpp  dayfocus.h  mainwindow.cpp
include/serialization/: binaryserializer.cpp  binaryserializer.h  jsonserializer.cpp  jsonserializer.h  serializable.h  serializer.h
include/session/: activitylog.cpp  activitylog.h  edithistory.cpp  edithistory.h  profile.cpp  profile.h  profilequery.cpp  profilequery.h  session.h
resource/: res.qrc
